--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>hibernate-validator-security-contribs</groupId>
+	<groupId>com.github.righettod</groupId>
 	<artifactId>hibernate-validator-security-contribs</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>hibernate-validator-security-contribs</name>
@@ -204,12 +204,12 @@
 		<repository>
 			<id>Sonatype-OSS-Releases</id>
 			<name>Sonatype OSS repository for staging releases</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 		<snapshotRepository>
 			<id>Sonatype-OSS-Snapshots</id>
 			<name>Sonatype OSS repository for deploying snapshots</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
