Update version notes

--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
 	<url>https://github.com/righettod/hibernate-validator-security-contribs</url>
 	<organization>
 		<name>Personal</name>
-		<url>http://righettod.googlecode.com</url>
+		<url>http://righettod.github.com</url>
 	</organization>
 	<distributionManagement>
 		<repository>
