--- a/pom.xml
+++ b/pom.xml
@@ -11,26 +11,31 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.2.0.Final</version>
+			<version>LATEST</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
+			<version>LATEST</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.4</version>
+			<version>LATEST</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>LATEST</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>LATEST</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -43,6 +48,32 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<id>enforce-build-requirements</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>[3.0.3,)</version>
+								</requireMavenVersion>
+								<requireJavaVersion>
+									<version>[1.6.0,)</version>
+								</requireJavaVersion>
+							</rules>
+							<fail>true</fail>
+							<ignoreCache>true</ignoreCache>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -191,9 +222,9 @@
 		<url>https://github.com/righettod/hibernate-validator-security-contribs/issues</url>
 	</issueManagement>
 	<scm>
-    <connection>scm:git:git@github.com:righettod/hibernate-validator-security-contribs.git</connection>
-    <developerConnection>scm:git:git@github.com:righettod/hibernate-validator-security-contribs.git</developerConnection>
-    <url>https://github.com/righettod/hibernate-validator-security-contribs</url>
+		<connection>scm:git:git@github.com:righettod/hibernate-validator-security-contribs.git</connection>
+		<developerConnection>scm:git:git@github.com:righettod/hibernate-validator-security-contribs.git</developerConnection>
+		<url>https://github.com/righettod/hibernate-validator-security-contribs</url>
 	</scm>
 	<url>https://github.com/righettod/hibernate-validator-security-contribs</url>
 	<organization>
