--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>LATEST</version>
+			<version>4.9</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
