--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.righettod</groupId>
 	<artifactId>hibernate-validator-security-contribs</artifactId>
-	<version>1.2.1</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<name>hibernate-validator-security-contribs</name>
 	<packaging>jar</packaging>
 	<description>This project aims at providing a set of content-checking constraint annotations, focused on security, using the JSR303 RI Hibernate Validation.</description>
