--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<version>2.6</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>	         		
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.9</version>
@@ -42,12 +47,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.9</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -218,9 +217,9 @@
 			<id>righettod</id>
 			<name>Dominique Righetto</name>
 			<email>dominique.righetto@gmail.com</email>
-			<url>https://github.com/righettod/hibernate-validator-security-contribs</url>
+			<url>http://www.righettod.eu</url>
 			<roles>
-				<role>Main geek</role>
+				<role>Developer</role>
 			</roles>
 			<timezone>+1</timezone>
 		</developer>
@@ -241,7 +240,7 @@
 	<url>https://github.com/righettod/hibernate-validator-security-contribs</url>
 	<organization>
 		<name>CGI (Luxemburg Office)</name>
-		<url>http://www.cgi.com</url>
+		<url>https://www.facebook.com/cgilux</url>
 	</organization>
 	<distributionManagement>
 		<repository>
