Set Victims enforcer rule behavior to WARNING during the time that the Victims repository is down in order to unlock to build process.

--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,8 @@
 						<configuration>
 							<rules>
 								<rule implementation="com.redhat.victims.VictimsRule">
-									<metadata>fatal</metadata>
-									<fingerprint>fatal</fingerprint>
+									<metadata>warning</metadata>
+									<fingerprint>warning</fingerprint>
 									<updates>auto</updates>
 								</rule>
 							</rules>
