Disable Victims rule during the time the ref server is down.

--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,8 @@
 								<rule implementation="com.redhat.victims.VictimsRule">
 									<metadata>warning</metadata>
 									<fingerprint>warning</fingerprint>
-									<updates>auto</updates>
+									<!-- Until server will go back to live -->
+									<updates>off</updates>
 								</rule>
 							</rules>
 						</configuration>
