--- a/pom.xml
+++ b/pom.xml
@@ -99,10 +99,9 @@
 						<configuration>
 							<rules>
 								<rule implementation="com.redhat.victims.VictimsRule">
-									<metadata>warning</metadata>
-									<fingerprint>warning</fingerprint>
-									<!-- Until server will go back to live -->
-									<updates>off</updates>
+									<metadata>fatal</metadata>
+									<fingerprint>fatal</fingerprint>
+									<updates>auto</updates>
 								</rule>
 							</rules>
 						</configuration>
