--- a/pom.xml
+++ b/pom.xml
@@ -60,57 +60,6 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.3</version>
-				<dependencies>
-					<dependency>
-						<groupId>com.redhat.victims</groupId>
-						<artifactId>enforce-victims-rule</artifactId>
-						<version>1.3.1</version>
-						<type>jar</type>
-					</dependency>
-				</dependencies>				
-				<executions>
-					<execution>
-						<id>enforce-build-requirements</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<requireMavenVersion>
-									<version>[3.0.3,)</version>
-								</requireMavenVersion>
-								<requireJavaVersion>
-									<version>[1.6.0,)</version>
-								</requireJavaVersion>
-							</rules>
-							<fail>true</fail>
-							<ignoreCache>true</ignoreCache>
-						</configuration>
-					</execution>
-					<execution>
-						<id>apply-enforce-victims-rule</id>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
-						<phase>package</phase>
-						<configuration>
-							<rules>
-								<rule implementation="com.redhat.victims.VictimsRule">
-									<metadata>fatal</metadata>
-									<fingerprint>fatal</fingerprint>
-									<updates>auto</updates>
-									<jdbcUrl>jdbc:h2:file:/tmp/CVELocalCache;LOCK_TIMEOUT=10000</jdbcUrl>
-								</rule>
-							</rules>
-						</configuration>
-					</execution>					
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
@@ -296,4 +245,60 @@
 		<artifactId>oss-parent</artifactId>
 		<version>7</version>
 	</parent>
+	<profiles>
+		<profile>
+			<!-- Dev station use Windows - Build server use Linux -->
+			<!-- Use enforcer on DEV station because Victim enforcer do not run on 
+				CloudBees -->
+			<id>dev-station</id>
+			<activation>
+				<os>
+					<family>Windows</family>
+				</os>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-enforcer-plugin</artifactId>
+						<version>1.3</version>
+						<dependencies>
+							<dependency>
+								<groupId>com.redhat.victims</groupId>
+								<artifactId>enforce-victims-rule</artifactId>
+								<version>1.3.1</version>
+								<type>jar</type>
+							</dependency>
+						</dependencies>
+						<executions>
+							<execution>
+								<id>check-system-requirements-and-dependencies-for-security-vulns</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>enforce</goal>
+								</goals>
+								<configuration>
+									<rules>
+										<requireMavenVersion>
+											<version>[3.0.3,)</version>
+										</requireMavenVersion>
+										<requireJavaVersion>
+											<version>[1.6.0,)</version>
+										</requireJavaVersion>
+										<rule implementation="com.redhat.victims.VictimsRule">
+											<metadata>fatal</metadata>
+											<fingerprint>fatal</fingerprint>
+											<updates>auto</updates>
+										</rule>
+									</rules>
+									<fail>true</fail>
+									<ignoreCache>true</ignoreCache>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
