--- a/pom.xml
+++ b/pom.xml
@@ -192,9 +192,8 @@
 	</properties>
 	<licenses>
 		<license>
-			<name>Apache 2</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<comments>A business-friendly OSS license</comments>
+			<name>GNU General Public License (GPL) v3</name>
+			<url>http://www.gnu.org/licenses/gpl.txt</url>
 		</license>
 	</licenses>
 	<developers>
