--- a/pom.xml
+++ b/pom.xml
@@ -223,8 +223,8 @@
     </scm>
     <url>https://github.com/righettod/hibernate-validator-security-contribs</url>
     <organization>
-        <name>CGI (Luxemburg Office)</name>
-        <url>https://www.facebook.com/cgilux</url>
+        <name>Personnal</name>
+        <url>https://www.righettod.eu</url>
     </organization>
     <distributionManagement>
         <repository>
