--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
     </scm>
     <url>https://github.com/righettod/hibernate-validator-security-contribs</url>
     <organization>
-        <name>Personnal</name>
+        <name>Personal</name>
         <url>https://www.righettod.eu</url>
     </organization>
     <distributionManagement>
