--- a/pom.xml
+++ b/pom.xml
@@ -146,12 +146,12 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-report-plugin</artifactId>
-                            <version>2.15</version>
+                            <version>2.16</version>
                         </plugin>
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>cobertura-maven-plugin</artifactId>
-                            <version>2.5.2</version>
+                            <version>2.5.1</version>
                             <configuration>
                                 <formats>
                                     <format>xml</format>
@@ -162,7 +162,7 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-checkstyle-plugin</artifactId>
-                            <version>2.10</version>
+                            <version>2.11</version>
                             <configuration>
                                 <configLocation>checkstyle.xml</configLocation>
                             </configuration>
@@ -272,7 +272,7 @@
                         <executions>
                             <execution>
                                 <id>check-system-requirements-and-dependencies-for-security-vulns</id>
-                                <phase>validate</phase>
+                                <phase>test</phase>
                                 <goals>
                                     <goal>enforce</goal>
                                 </goals>
